--- a/public/404.html
+++ b/public/404.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>Not Found</title>
+    <title>Page Not Found</title>
   </head>
   <body>
     <h1>404 Not Found</h1>
